--- a/Web-sigma/src/index.css
+++ b/Web-sigma/src/index.css
@@ -1,3 +1,22 @@
+/**
+ * VARIABLES:
+ * **********
+ */
+:root {
+  --ruby: #e22653;
+  --grey: #999;
+  --dark-grey: #666;
+  --light-grey: #ccc;
+  --cream: #f9f7ed;
+  --transparent-white: #ffffffcc;
+  --transition: all ease-out 300ms;
+  --shadow: 0 1px 5px var(--dark-grey);
+  --hover-opacity: 0.7;
+  --stage-padding: 8px;
+  --panels-width: 350px;
+  --border-radius: 3px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -62,6 +81,8 @@ p {
   padding: 1em;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
+  overflow: auto;
+  max-height: calc(80vh - 2 * var(--stage-padding));
 }
 
 .panel:not(:last-child) {
@@ -86,6 +107,65 @@ p {
 
 .panel h2 button:hover {
   opacity: var(--hover-opacity);
+}
+
+.caption-row input[type="checkbox"] {
+  display: none;
+}
+
+.caption-row input[type="checkbox"]:not(:checked)+label {
+  color: var(--dark-grey);
+}
+
+.caption-row input[type="checkbox"]:not(:checked)+label .circle {
+  background-color: white !important;
+}
+
+.caption-row label {
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+}
+
+.caption-row label:hover {
+  opacity: var(--hover-opacity);
+}
+
+.caption-row label .circle {
+  flex-shrink: 0;
+  display: inline-block;
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 1.2em;
+  vertical-align: middle;
+  box-sizing: border-box;
+  background-color: var(--dark-grey);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-right: 0.2em;
+  transition: var(--transition);
+  border: 3px solid var(--dark-grey);
+}
+
+.caption-row label .node-label {
+  flex-grow: 1;
+}
+
+.caption-row label .bar {
+  position: relative;
+  background: var(--light-grey);
+  height: 3px;
+  margin-bottom: 0.2em;
+}
+
+.caption-row label .bar .inside-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: var(--dark-grey);
+  transition: var(--transition);
 }
 
 /**
